# openspeclib

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: build-release.yml  ci.yml  deploy-viewer.yml
docs/: adding-sources.md  data-structure.md  licensing.md  processing-pipeline.md  provenance.md
huggingface_cards/: README.md
huggingface_cards/ecostress/: README.md
huggingface_cards/usgs_splib07/: README.md
schemas/: catalog.schema.json  library.arrow.schema.json  library.parquet-schema.md  library.schema.json  licenses.schema.json  spectrum.schema.json
scripts/: deploy_local.sh  generate_schemas.py
src/openspeclib/: __init__.py  catalog.py  cli.py  combine.py  models.py  storage.py  units.py  validate.py
src/openspeclib/loaders/: __init__.py  asu_tes.py  base.py  bishop.py  ecosis.py  ecosis_datasets.json  ecosis_scales.py  ecostress.py  ossl.py  relab.py  usgs.py
tests/: conftest.py  test_asu_tes_loader.py  test_bishop_loader.py  test_combine.py  test_ecosis_loader.py  test_ecostress_loader.py  test_models.py  test_ossl_loader.py  test_relab_loader.py  test_storage.py  test_units.py  test_usgs_loader.py  test_validate.py
tests/fixtures/asu_tes/: olivine_ki3115.txt  quartz_bur4120.txt
tests/fixtures/bishop/: calcite_iceland_spar.txt  gypsum_selenite.txt
tests/fixtures/ecosis/: 03e46f54.json
tests/fixtures/ecostress/: mineral.calcite.powder.tir.jhu.becknic.spectrum.txt  vegetation.deciduous.oak.vis.jhu.asd.spectrum.txt
tests/fixtures/relab/: allende_meteorite.txt  olivine_fo91.txt
tests/fixtures/usgs/: s07_AV95_Wavelengths_ASD.txt
tests/fixtures/usgs/ChapterM_Minerals/: s07AV95a_Olivine_GDS70_ASD.txt
tests/fixtures/usgs/ChapterR_Rocks/: s07AV95a_Granite_HS66_ASD.txt
viewer/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
viewer/.claude/: launch.json
viewer/public/data/: checksums.txt
viewer/src/: App.tsx  index.css
viewer/src/components/common/: Badge.tsx  ErrorBoundary.tsx
viewer/src/components/layout/: Header.tsx  InfoModal.tsx  Sidebar.tsx
viewer/src/components/results/: ResultsTable.tsx
viewer/src/components/search/: ActiveFilters.tsx  CategoryFilter.tsx  SearchBar.tsx  SensorSelector.tsx  SourceSelector.tsx
viewer/src/components/visualization/: SpectralChart.tsx
viewer/src/constants/: sensors.ts  urls.ts
viewer/src/lib/: catalog.ts  downsampling.ts  duckdb.ts  export.ts  queries.ts  wavelength-utils.ts
viewer/src/state/: AppContext.tsx  types.ts
viewer/src/types/: catalog.ts  sensors.ts
